--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "node esbuild.config.mjs",
     "build": "node esbuild.config.mjs production",
     "version": "node version-bump.mjs && git add manifest.json versions.json",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+    "release": "node release.mjs"
   },
   "keywords": [
     "obsidian",
