--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@typescript-eslint/parser": "5.29.0",
     "builtin-modules": "3.3.0",
     "esbuild": "0.17.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "obsidian": "latest",
     "tslib": "2.4.0",
     "typescript": "4.7.4"
